2000-06-01  Federico Mena Quintero  <federico@helixcode.com>

	* gui/gnome-cal.c (editor_closed_cb): Handler for the
	"editor_closed" signal of the event editor; we just destroy it
	then.

	* gui/event-editor.c (app_delete_event_cb): Callback used when the
	dialog is closed.  Release the iCalObject here instead of the
	event editor's destroy handler, and emit the new "editor_closed"
	signal.

2000-06-01  Federico Mena Quintero  <federico@helixcode.com>

	* gui/event-editor-dialog.glade: Change of plans.  The toplevel
	GnomeApp is now generated with Glade instead of being created in
	the program code.  Otherwise we can't migrate the accelerators to
	the new toplevel and they won't work.

	* gui/event-editor.[ch]: EventEditor now derives from GtkObject.
	This lets us use the GnomeApp created by libglade and still have
	signals and stuff.

	* gui/event-editor.c (create_menu): Tell the UI handler that the
	menubar is the GnomeApp's existing one, not to create a new one.
	(create_toolbar): Tell the UI handler to use the GnomeApp's
	existing toolbar.
	(event_editor_focus): New function to raise/focus an event editor.

	* gui/gnome-cal.c (gnome_calendar_edit_object): Use
	event_editor_focus().

2000-06-01  Ettore Perazzoli  <ettore@helixcode.com>

	* gui/calendar-commands.c (calendar_control_activate): Put the
	toolbar into a frame to make it look like standard GNOME toolbars.
	Also, set `GNOME_DOCK_ITEM_BEH_NEVER_VERTICAL' so that it does not
	do evil things when its moved to the left or the right of the
	window.

2000-05-31  Federico Mena Quintero  <federico@helixcode.com>

	* gui/gnome-cal.h (GnomeCalendar): Added a hash table to map
	calendar objects to their respective event editors.

	* gui/gnome-cal.c (gnome_calendar_init): Create the
	object_editor_hash.
	(gnome_calendar_destroy): Free the object_editor_hash.
	(gnome_calendar_edit_object): New function to centralize the
	launching of event editors; if one already exists for a particular