@@ -1,3 +1,7 @@
+2000-06-02  Christopher James Lahey  <clahey@helixcode.com>
+
+	* gui/Makefile.am: Fixed EXTRA_DIST.
+
 2000-06-01  Federico Mena Quintero  <federico@helixcode.com>
 
 	* gui/gnome-cal.c (editor_closed_cb): Handler for the
